// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar render no sidebar groups 1`] = `
<div
  class="sidebar"
>
  <navlinks-stub
    issidebar="true"
  />
    
  <!---->
   
</div>
`;

exports[`Sidebar render sidebar groups 1`] = `
<div
  class="sidebar"
>
  <navlinks-stub
    issidebar="true"
  />
    
  <ul
    class="sidebar-links"
  >
    <li>
      <sidebarlink-stub
        item="[object Object]"
      />
    </li>
    <li>
      <sidebarlink-stub
        item="[object Object]"
      />
    </li>
  </ul>
   
</div>
`;
